# TinkerBot-tech-for-ComfyUI-Touchpad

./: README.md  __init__.py  pyproject.toml
web/: fix touchpad pan and zoom.js
